2005-08-09  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyKind.cs
	  CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Lots of little fixes. Now dumpbin is coherent
		compared with an assembly emitted with csc or mcs
		but still not yet compatible with .net.

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Fix an array out of range while trying to read
		fixed arrays signatures

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Implem/AssemblyName.cs
	  Mono.Cecil.Implem/StructureReader.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Binary/ImageCharacteristics.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/Image.cs:
		Cecil now emits assemblies that are understood
		by Mono and Cecil itself. Still have troubles
		with Msft CLR.

2005-08-08  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb
	  CodeGen/templates/MetadataTableReader.cs
	  CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/MetadataTableWriter.cs
	  CodeGen/templates/BaseMetadataVisitor.cs
	  CodeGen/templates/MetadataRowReader.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  CodeGen/cecil.xml
	  Mono.Cecil.Metadata/MetadataInitializer.cs
	  Mono.Cecil.Metadata/BaseMetadataVisitor.cs
	  Mono.Cecil.Metadata/MetadataTableReader.cs
	  Mono.Cecil.Metadata/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataRowReader.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/CLIHeader.cs
	  Mono.Cecil.Binary/ImageInitializer.cs:
		The writing layer almost works.

	* Mono.Cecil/AssemblyKind.cs
	  Mono.Cecil/TargetRuntime.cs
	  Mono.Cecil.dll.sources:
		Add thoses enumes to control assembly writing.
	* Mono.Cecil/AssemblyFactory.cs